# dippy-commune-subnet

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/miner_registry/: miner_registry.py
src/subnet/: cli.py
src/subnet/evaluator/: evaluator.py
src/subnet/miner/: model.py
src/subnet/validator/: validator.py
src/util/: event_logger.py
